src/tests/snapshots/swayward__tests__window_opening__check_target_size@fsF-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: []
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
